--- a/res/values/blaze_strings.xml
+++ b/res/values/blaze_strings.xml
@@ -173,4 +173,16 @@
     <string name="double_tap_title">Double tap</string>
     <string name="doze_double_tap_title">Double tap to check phone</string>
     <string name="doze_double_tap_summary">Pulse notifications by a double tap</string>
+
+    <!-- Model and Hardware -->
+    <string name="blaze_processor_title">Processor</string>
+    <string name="blaze_storage_code_title">Storage</string>
+    <string name="blaze_battery_type_title">Battery</string>
+    <string name="blaze_screen_title">Screen</string>
+    <string name="net_info">Network</string>
+    <string name="mod_info">@string/model_info</string> 
+    <string name="id_info">Identifiers</string>
+    <string name="model_summary">Model, phone number, IMEI, etc</string>
+    <string name="model_name">Device status</string>
+    <string name="legal_summary">Licenses and legal</string>
 </resources>
