--- a/res/values/blaze_styles.xml
+++ b/res/values/blaze_styles.xml
@@ -20,4 +20,18 @@
         <item name="android:textColor">@color/primary_dark_material_light</item>
         <item name="android:lineSpacingMultiplier">1.2</item>
     </style>
+
+    <style name="TextAppearance.BlazeInfoTitle">
+        <item name="android:textColor">?android:attr/textColorPrimary</item>
+        <item name="android:textSize">12sp</item> <item name="android:textAllCaps">true</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+    </style>
+
+    <style name="TextAppearance.BlazeInfoSummary"> 
+        <item name="android:textColor">?android:attr/textColorSecondary</item> 
+        <item name="android:textSize">12.5sp</item>
+        <item name="android:lineSpacingMultiplier">1.3</item>
+        <item name="android:fontFamily">sans-serif-book</item>
+    </style>
+
 </resources>
